add panel with controls, add option to record canvas, add required node version

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "author": "mateuszJS <mate.walendzik@gmail.com>",
   "license": "MIT",
   "private": false,
+  "engines": {
+    "node": ">=16.3.0"
+  },
   "scripts": {
     "start": "webpack serve --open",
     "build": "webpack"
