make ts more hmm...demanding? Irritating? And maybe helpful. Plus general refactor

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,18 @@
   "compilerOptions": {
     "outDir": "./dist",
     "sourceMap": true,
-    "noImplicitAny": true,
     "module": "es6",
     "target": "es5",
     "allowJs": true,
     "moduleResolution": "node",
+    "baseUrl": "./src",
+
+    // everything below is just suggested by https://www.npmjs.com/package/@tsconfig/recommended
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "display": "Recommended"
 }
