--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "webpack"
   },
   "devDependencies": {
+    "@tsconfig/recommended": "^1.0.1",
     "css-loader": "^6.7.2",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
