--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@tsconfig/recommended": "^1.0.1",
     "css-loader": "^6.7.2",
     "html-webpack-plugin": "^5.5.0",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
