Change whole app to the video frame viewer :) (#1)
* replace raw-loader with webpack out of the box asset/source

* add css file, add boilerplate for WebGL

* add mat3 utils, add some basic types for uniforms and attributes(still WIP)

* add panel with controls, add option to record canvas, add required node version

* use image and video as texture, add Texture class

* fix video

* add solid fill texture class, render shader to texture

* make ts more hmm...demanding? Irritating? And maybe helpful. Plus general refactor

* create layout of the app, update webgl utils implementation

* maybe it's time to do a commit *thinking*

* add dedicated element to handle scroll in timeline

* add pointer line on the timeline, change border to outline, so it doesn't impact the position anymore

* firefox fixes(still frames are not loaded)

* update frame viewer a lot

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,19 @@
   "compilerOptions": {
     "outDir": "./dist",
     "sourceMap": true,
-    "noImplicitAny": true,
-    "module": "es6",
+    "module": "esnext", // normally it would be es6, but because of dynamic import it need to be something modern
+    "removeComments": false, // we need to keep "magic comments" to keep dynamic imports working
     "target": "es5",
     "allowJs": true,
     "moduleResolution": "node",
+    "baseUrl": "./src",
+
+    // everything below is just suggested by https://www.npmjs.com/package/@tsconfig/recommended
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "display": "Recommended"
 }
