--- a/package.json
+++ b/package.json
@@ -7,13 +7,20 @@
   "author": "mateuszJS <mate.walendzik@gmail.com>",
   "license": "MIT",
   "private": false,
+  "engines": {
+    "node": ">=16.3.0"
+  },
   "scripts": {
     "start": "webpack serve --open",
     "build": "webpack"
   },
   "devDependencies": {
+    "@tsconfig/recommended": "^1.0.1",
+    "css-loader": "^6.7.2",
     "html-webpack-plugin": "^5.5.0",
-    "raw-loader": "^4.0.2",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
